--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "DelaunaySwift"]
 	path = DelaunaySwift
-	url = https://github.com/sakrist/DelaunaySwift.git
+url=https://sakrist@bitbucket.org/sakrist/delaunay.git
 	branch = master
