--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Delaunay"]
 	path = Delaunay
-	url = https://sakrist@bitbucket.org/sakrist/delaunay.git
+url=https://github.com/sakrist/Delaunay.git
